--- a/hello/templates/db.html
+++ b/hello/templates/db.html
@@ -11,7 +11,7 @@
 <ul>
 
 {% for component in components %}
-    <li>{{ component.name, component.version_number, component.date, component.url }}</li>
+    <li>{{ component.name }} {{ component.version_number }} {{ component.date }} {{ component.url }}</li>
 {% endfor %}
 
 </ul>
