--- a/templates/hello.html
+++ b/templates/hello.html
@@ -8,7 +8,7 @@
 <h1>Hello World from Flask</h1>
 
 
-<a href="file">/file</a><br/>
+<a href="upload">/upload</a><br/>
 
 <a href="/static/Assignment 3/index.html">static files sample</a><br/>
 
