applied css to hello.html

--- a/templates/hello.html
+++ b/templates/hello.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Hello from Flask</title>
+    <link rel="stylesheet" href="/static/stylesheet/style.css"/>
 </head>
 <body>
+
+<main>
 <h1>Hello World from Flask</h1>
 
 
@@ -38,7 +41,7 @@
 <div id="id"></div>
 
 
-
+</main>
 
 <script src="/javascript/AJAXGETPOST.js"></script>
 
