--- a/templates/files.html
+++ b/templates/files.html
@@ -18,7 +18,7 @@
       {% endwith %}
       <hr>
 
-      <form class="upload-form" action="{{ url_for('upload') }}" method="POST" enctype="multipart/form-data">
+      <form class="upload-form" action="{{ url_for('component') }}" method="POST" enctype="multipart/form-data">
         <p><input type="file" name="file"></p>
         <button type="submit" class="btn btn-primary">Upload</button>
       </form>
