updating CL client with versions and component names

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
 
       <table class="table table-striped">
         <tr>
-          <th>Bucket Name</th>
+          <th>Repo Name</th>
           <th>Created</th>
           <th></th>
         </tr>
