--- a/templates/layout.html
+++ b/templates/layout.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/fontawesome.css" integrity="sha384-q3jl8XQu1OpdLgGFvNRnPdj5VIlCvgsDQTQB6owSOHWlAurxul7f+JpUOVdAiJ5P" crossorigin="anonymous">
   <link rel="stylesheet" href="/static/styles.css">
 {% endblock %}
-{% block title %}Flask S3 Browser{% endblock %}
+{% block title %}ITL Software Component Store{% endblock %}
 
 {% block navbar %}
 <div class="container">
