Look-up for Recipes implemented & Create new recipe functionality

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -13,7 +13,8 @@
   <div class="navbar">
     <ul class="nav navbar-nav">
       <li><a href="{{ url_for('index') }}">Buckets</a></li>
-      <li><a href="{{ url_for('files') }}">Files</a></li>
+      <li><a href="{{ url_for('files') }}">Components</a></li>
+      <li><a href="{{ url_for('recipes') }}">Recipes</a></li>
     </ul>
   </div>
 </div>
