--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -25,7 +25,7 @@
         <tr>
           <td>{{ name }}</td>
           <td class="td-buttons">
-            <form class="delete-form" action="{{ url_for('') }}" method="POST">
+            <form class="delete-form" action="{{ url_for('version') }}" method="POST">
               <input type="hidden" name="component" value="{{ name }}">
               <button type="submit" class="btn btn-outline-primary">
                 Versions
