--- a/templates/layout.html
+++ b/templates/layout.html
@@ -10,6 +10,7 @@
 
 {% block navbar %}
 <div class="container">
+  <img src="static/icon.png" alt="ITL logo" width="50px" height="50px">
   <div class="navbar">
     <ul class="nav navbar-nav">
       <li><a href="{{ url_for('index') }}">Buckets</a></li>
