--- a/templates/recipeDetails.html
+++ b/templates/recipeDetails.html
@@ -42,6 +42,15 @@
         <tr>
             {% if comp %}
               <td>{{comp[1]}}</td><td>{{comp[2]}}</td>
+              <td>
+                <form class="delete-form" action="{{ url_for('removeComponentRecipe') }}" method="POST">
+                  <input type="hidden" name="recipeID" value="{{ recipePK }}">
+                  <input type="hidden" name="compID" value="{{ comp[0] }}">
+                  <button type="submit" class="btn btn-outline-primary">
+                    Remove
+                  </button>
+                </form>
+              </td>
             {% endif %}
         </tr>
         {% endfor %}
