Updated CSS on Web UI

--- a/templates/editRecipe.html
+++ b/templates/editRecipe.html
@@ -4,7 +4,7 @@
 {% block content %}
 <div class="container" xmlns="http://www.w3.org/1999/html">
     <div class="col-12-xs">
-      <h3>Recipe Details</h3>
+      <h3 class="well">Recipe Details</h3>
       {% with messages = get_flashed_messages() %}
         {% if messages %}
           <p class="bg-info" style="padding: 15px;">
@@ -15,18 +15,19 @@
         {% endif %}
       {% endwith %}
       <hr>
-      <form action = "{{ url_for('updateRecipe') }}" method="post">
+        <form action = "{{ url_for('updateRecipe') }}" method="post">
         <input type="hidden" name="id" value="{{ recipe['id'] }}">
         Software Name:<br>
         <input type="text" name="name" value="{{ recipe['name'] }}"><br>
         Version Number: <br>
         <input type ="text" name="version" value="{{ recipe['version_num'] }}"><br>
-        Status: <br> 
+        Status: <br>
         <input type ="radio" name="status" value="In Development" {% if recipe['status'] == 'In Development' %} checked{% endif %}>In Development<br>
         <input type ="radio" name="status" value="Released" {% if recipe['status'] == 'Released' %} checked{% endif %}>Released<br><br>
-
-        <button type="submit" name="submit">Submit</button><br>
+        <button type="submit" name="submit" class="btn btn-primary">Submit</button><br>
       </form>
+      <br>
+      <a href="{{ url_for('recipes') }}">Go back to recipe list<a>
     </div>
   </div>
 {% endblock %}
