--- a/templates/files.html
+++ b/templates/files.html
@@ -2,47 +2,48 @@
 {% block title %}ITL Component Store{% endblock %}
 
 {% block content %}
-  <div class="container">
+<div class="container">
     <div class="col-12-xs">
-      <h3>Store Components</h3>
-      <p>Created: {{ my_bucket.creation_date | datetimeformat }}</p>
-
-      {% with messages = get_flashed_messages() %}
+        <h3 class="well">Component Store</h3>
+        <p><b>Date Created:</b> {{ my_bucket.creation_date | datetimeformat }}</p>
+        {% with messages = get_flashed_messages() %}
         {% if messages %}
-          <p class="bg-info" style="padding: 15px;">
-          {% for message in messages %}
+        <p class="bg-info" style="padding: 15px;">
+            {% for message in messages %}
             {{ message }}<br>
-          {% endfor %}
-          </p>
+            {% endfor %}
+        </p>
         {% endif %}
-      {% endwith %}
-      <hr>
-
-      <form class="upload-form" action="{{ url_for('component') }}" method="POST" enctype="multipart/form-data">
-        <p><input type="file" name="file"></p>
-        <button type="submit" class="btn btn-primary">Upload</button>
-      </form>
-      <hr>
-
-      <table class="table table-striped">
-        <tr>
-          <th>Component</th>
-          <th></th>
-        </tr>
-        {% for name in components %}
-        <tr>
-          <td>{{ name }}</td>
-          <td class="td-buttons">
-            <form class="delete-form" action="{{ url_for('version') }}" method="POST">
-              <input type="hidden" name="component" value="{{ name }}">
-              <input type="hidden" name="atR" value="{{ atR }}"/>
-              <button type="submit" class="btn btn-outline-primary">
-                Versions
-              </button>
-            </form>
-        </tr>
-        {% endfor %}
-      </table>
+        {% endwith %}
+        <hr>
+        <h4>List of available components:</h4>
+        <table class="table table-bordered">
+            <tr>
+                <th class="warning">Component Name</th>
+                <th class="info">To choose a Version, click 'Select' below</th>
+            </tr>
+            {% for name in components %}
+            <tr>
+                <td class="col-sm-4">{{ name }}</td>
+                <td class="col-sm-2">
+                    <form class="delete-form" action="{{ url_for('version') }}" method="POST">
+                        <input type="hidden" name="component" value="{{ name }}">
+                        <input type="hidden" name="atR" value="{{ atR }}"/>
+                        <button type="submit" class="btn btn-info">
+                            Select
+                        </button>
+                    </form>
+                </td>
+            </tr>
+            {% endfor %}
+        </table>
+        <hr>
+        <h3 class="well">Upload a component:</h3>
+        <form class="upload-form" action="{{ url_for('component') }}" method="POST" enctype="multipart/form-data">
+            <p><input type="file" name="file"></p>
+            <button type="submit" class="btn btn-primary">Upload</button>
+        </form>
+        <hr>
     </div>
-  </div>
+</div>
 {% endblock %}
