--- a/templates/recipeDetails.html
+++ b/templates/recipeDetails.html
@@ -4,8 +4,8 @@
 {% block content %}
   <div class="container">
     <div class="col-12-xs">
-      <h2>Recipe: {{ recipeName }}</h2>
-      <h3>Version: {{ recipeVER }}</h3>
+      <h3 class="well">Recipe Name: {{ recipeName }}</h3>
+      <h5 style="color: red" ><b>Version #: </b>{{ recipeVER }}</h5>
       {% with messages = get_flashed_messages() %}
         {% if messages %}
           <p class="bg-info" style="padding: 15px;">
@@ -16,27 +16,28 @@
         {% endif %}
       {% endwith %}
       <hr>
-
-      <hr>
+      <p>To add components to this recipe, click 'Add Components' below:</p>
       <form class="download-form" action="{{ url_for('files') }}" method="get">
         <input type="hidden" name="addToRecipe" value="{{ recipePK }}">
-        <button type="submit" class="btn btn-outline-primary">
-          Add Components to this Recipe
+        <button type="submit" class="btn btn-info">
+          Add Components
         </button>
       </form>
       <br>
+      <p>To modify this recipe, click 'Edit' below:</p>
       <form class="delete-form" action="{{ url_for('editRecipe') }}" method="POST">
         <input type="hidden" name="recipeID" value="{{ recipePK }}">
-        <button type="submit" class="btn btn-outline-primary">
+        <button type="submit" class="btn btn-success">
           Edit
         </button>
       </form>
       <br><br>
 
-      <table class="table table-striped">
+      <table class="table table-bordered">
         <tr>
-          <th>Component</th>
-          <th>Version</th>
+          <th class="warning">Component</th>
+          <th class="info">Version</th>
+          <th class="danger">Remove</th>
         </tr>
         {% for comp in all_Components %}
         <tr>
@@ -46,7 +47,7 @@
                 <form class="delete-form" action="{{ url_for('removeComponentRecipe') }}" method="POST">
                   <input type="hidden" name="recipeID" value="{{ recipePK }}">
                   <input type="hidden" name="compID" value="{{ comp[0] }}">
-                  <button type="submit" class="btn btn-outline-primary">
+                  <button type="submit" class="btn btn-danger">
                     Remove
                   </button>
                 </form>
@@ -55,6 +56,7 @@
         </tr>
         {% endfor %}
       </table>
+      <a href="{{ url_for('recipes') }}">Go back to recipe list<a>
     </div>
   </div>
 {% endblock %}
