Indicates in recipe when component has a newer version

--- a/templates/recipeDetails.html
+++ b/templates/recipeDetails.html
@@ -43,7 +43,8 @@
         <tr>
             {% if comp %}
               <td class="col-sm-4">{{comp[1]}}</td>
-              <td class="col-sm-4">{{comp[2]}}</td>
+              <td class="col-sm-4">{{comp[2]}}{% if comp[6] == 'True' %} *New Version Available*{% endif %}</td>
+
               <td class="col-sm-4">
                 <form class="delete-form" action="{{ url_for('removeComponentRecipe') }}" method="POST">
                   <input type="hidden" name="recipeID" value="{{ recipePK }}">
@@ -57,7 +58,7 @@
         </tr>
         {% endfor %}
       </table>
-      <a href="{{ url_for('recipes') }}">Go back to recipe list<a>
+      <a href="{{ url_for('recipes') }}">Go back to recipe list</a>
     </div>
   </div>
 {% endblock %}
